# llm_bits

./: README.md  pyproject.toml  utils.py
notebooks/: P01 - 01 - Guidelines.ipynb  P01 - 02 - Iterative.ipynb  P01 - 03 - Summarizing.ipynb  P01 - 04 - Inferring.ipynb  P01 - 05 - Transforming.ipynb  P01 - 06 - Expanding.ipynb  P01 - 07 - Chatbot.ipynb  P02 - 01 - Models Prompts Parsers.ipynb  P02 - 02 - Memory.ipynb
